--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- Favicon -->
   <link rel="shortcut icon" type="image/png" href="favicon.png"/>
 
-  <title>krumaska_blog</title>
+  <title>dartbird blog</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
